--- a/统计报表.html
+++ b/统计报表.html
@@ -123,7 +123,7 @@
               <img id="u1032_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u1033" class="text" style="visibility: visible;">
-                <p><span style="color:#80848F;">首页 / 统计报表/</span><span> 销售毛利统计/客户毛利明细</span></p>
+                <p><span style="color:#80848F;">首页 / 统计报表/</span><span> 销售毛利统计</span></p>
               </div>
             </div>
 
